// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Saved Payments List should render a loading state 1`] = `
<SavedPaymentsList
  payments={
    Object {
      "loading": true,
    }
  }
>
  <div
    className="soft-half-sides soft-double-sides@lap-and-up"
  >
    <Component>
      <div
        className="card"
      >
        <div
          className="card__item soft"
        >
          <div
            className="soft-half-top one-fifth push-bottom background--light-tertiary"
          />
          <div
            className="soft-half-top four-fifths push-half-bottom background--light-tertiary"
          />
          <div
            className="soft-half-top one-half push-bottom background--light-tertiary"
          />
          <div
            className="soft-half-top one-quarter background--light-tertiary"
          />
        </div>
      </div>
    </Component>
  </div>
</SavedPaymentsList>
`;

exports[`Saved Payments List should render properly with data 1`] = `
<SavedPaymentsList
  payments={
    Object {
      "savedPayments": Array [
        Object {
          "id": 1,
          "name": "Harambe's Card",
          "payment": Object {
            "accountNumber": "123456******1234",
            "paymentType": "Visa",
          },
        },
        Object {
          "id": 2,
          "name": "My Card",
          "payment": Object {
            "accountNumber": "654321******0123",
            "paymentType": "MasterCard",
          },
        },
      ],
    }
  }
>
  <div
    className="soft-half-sides soft-double-sides@lap-and-up"
  >
    <SectionHeader
      link={<Unknown />}
      title="Saved Accounts"
    >
      <div
        className="one-whole"
      >
        <div
          className="one-half floating display-inline-block floating--left soft soft-half-left"
        >
          <h6
            className="floating__item text-dark-tertiary flush"
          >
            Saved Accounts
          </h6>
        </div>
        <div
          className="one-half floating display-inline-block floating--right soft soft-half-right"
        >
          <Component>
            <SmallButton
              className="btn--dark-tertiary flush"
              onClick={[Function]}
              text="Add Account"
            >
              <button
                className="
    btn btn--small@next
    
    btn--dark-tertiary flush
  "
                disabled={undefined}
                onClick={[Function]}
                style={Object {}}
              >
                Add Account
              </button>
            </SmallButton>
          </Component>
        </div>
      </div>
    </SectionHeader>
    <div
      className="grid"
    >
      <Component
        key="1"
        payment={
          Object {
            "id": 1,
            "name": "Harambe's Card",
            "payment": Object {
              "accountNumber": "123456******1234",
              "paymentType": "Visa",
            },
          }
        }
      >
        <div />
      </Component>
      <Component
        key="2"
        payment={
          Object {
            "id": 2,
            "name": "My Card",
            "payment": Object {
              "accountNumber": "654321******0123",
              "paymentType": "MasterCard",
            },
          }
        }
      >
        <div />
      </Component>
    </div>
  </div>
</SavedPaymentsList>
`;

exports[`Saved Payments List should render with minimal props 1`] = `<SavedPaymentsList />`;

exports[`Saved Payments List should render without saved payments 1`] = `
<SavedPaymentsList
  payments={Object {}}
>
  <div
    className="soft-half-sides soft-double-sides@lap-and-up"
  >
    <SectionHeader
      link={<Unknown />}
      title="Saved Accounts"
    >
      <div
        className="one-whole"
      >
        <div
          className="one-half floating display-inline-block floating--left soft soft-half-left"
        >
          <h6
            className="floating__item text-dark-tertiary flush"
          >
            Saved Accounts
          </h6>
        </div>
        <div
          className="one-half floating display-inline-block floating--right soft soft-half-right"
        >
          <Component>
            <SmallButton
              className="btn--dark-tertiary flush"
              onClick={[Function]}
              text="Add Account"
            >
              <button
                className="
    btn btn--small@next
    
    btn--dark-tertiary flush
  "
                disabled={undefined}
                onClick={[Function]}
                style={Object {}}
              >
                Add Account
              </button>
            </SmallButton>
          </Component>
        </div>
      </div>
    </SectionHeader>
    <div
      className="card"
    >
      <div
        className="card__item soft"
      >
        <h4
          className="text-dark-primary"
        >
          Adding a saved account makes giving even easier!
        </h4>
        <p>
          We can’t wait for you to take your next step in giving. After you have given your first contribution, you’ll see your activity here.
        </p>
        <button
          className="btn one-whole@handheld flush-bottom"
          onClick={[Function]}
        >
          Get Started Now
        </button>
      </div>
    </div>
  </div>
</SavedPaymentsList>
`;
